[gd_scene load_steps=29 format=3 uid="uid://r6h5hl2hknw5"]

[ext_resource type="Script" uid="uid://d0ib2g4lboww5" path="res://Cards/card_scene.gd" id="1_1lm4k"]
[ext_resource type="Texture2D" uid="uid://bltgcohdt7luf" path="res://Art/Parts/Card Back.png" id="1_7utkc"]
[ext_resource type="Resource" uid="uid://bpeancuiyp4uf" path="res://Cards/Coral Beach/Torobbie.tres" id="2_6w4ti"]
[ext_resource type="PackedScene" uid="uid://e10rhyk8vaf2" path="res://Cards/card_front.tscn" id="5_gtb1b"]
[ext_resource type="FontFile" uid="uid://ckueavn23q31j" path="res://System/tahomabd.ttf" id="5_kjciy"]
[ext_resource type="FontFile" uid="uid://cny6q1afmskf3" path="res://System/tahoma.ttf" id="7_iaee2"]
[ext_resource type="AudioStream" uid="uid://b4hpufov7elwg" path="res://Audio/SFX/etc_mon_death.wav" id="8_5t3wl"]
[ext_resource type="AudioStream" uid="uid://i4dvvcxx1m68" path="res://Audio/SFX/eff_healing1.wav" id="9_w001t"]
[ext_resource type="Texture2D" uid="uid://c3dcjd3qu2eof" path="res://Art/Damage Burst.png" id="10_7bc34"]
[ext_resource type="AudioStream" uid="uid://cbfm0d5pg0mlx" path="res://Audio/SFX/dmg_normal_g.wav" id="12_76iwj"]
[ext_resource type="AudioStream" uid="uid://ir20887dxuxd" path="res://Audio/SFX/etc_warp.wav" id="13_0vcph"]
[ext_resource type="AudioStream" uid="uid://dso22g4suwp12" path="res://Audio/SFX/weapon001.wav" id="14_cvjde"]

[sub_resource type="ViewportTexture" id="ViewportTexture_lb430"]
viewport_path = NodePath("Card")

[sub_resource type="Animation" id="Animation_brmxk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Front:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Front:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.005, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Damage:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Damage:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SFX/Summon:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SFX/Damage:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SFX/Activate:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("SFX/Death:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Heal:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Heal:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath(".:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("SFX/Heal:playing")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ykqwr"]
resource_name = "activate"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Front:position:z")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8),
"transitions": PackedFloat32Array(0.176777, 3.4822, 1),
"update": 0,
"values": [0.0, -0.5, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/Activate:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dx17v"]
resource_name = "die"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Front:position:z")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.176777, 4.59479),
"update": 0,
"values": [0.0, 0.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Front:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.8),
"transitions": PackedFloat32Array(10.9283, 3.13834, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.729412, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SFX/Damage:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SFX/Death:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vm8ob"]
resource_name = "flip_down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.189465, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -3.14159)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06, 0.5),
"transitions": PackedFloat32Array(0.25, 3.24901, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.5, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:is_facedown")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6tdgx"]
resource_name = "flip_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.189465, 1),
"update": 0,
"values": [Vector3(0, 0, -3.14159), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06, 0.5),
"transitions": PackedFloat32Array(0.25, 3.24901, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.5, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:is_facedown")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3gibq"]
resource_name = "heal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(0.329877, 2.63902, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.3, 1.3, 1.3), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/Heal:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0xfol"]
resource_name = "hover_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Front:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.170755, 1),
"update": 0,
"values": [0.005, 0.505]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Front:position:z")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.170755, 1),
"update": 0,
"values": [0.0, -0.25]
}

[sub_resource type="Animation" id="Animation_sdvnn"]
resource_name = "hover_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Front:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.170755, 1),
"update": 0,
"values": [0.505, 0.005]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Front:position:z")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.170755, 1),
"update": 0,
"values": [-0.25, 0.0]
}

[sub_resource type="Animation" id="Animation_qcbxv"]
resource_name = "play"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Front:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.31864, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Front:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(5.27803, 0.25, 2.73208, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 0.005, 0), Vector3(0, 0.2, 0), Vector3(0, 0.005, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SFX/Summon:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mfx8y"]
resource_name = "reveal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.277392, 2.54912, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_t3lm6"]
resource_name = "show_damage"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Damage:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Damage:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.5, 0)]
}

[sub_resource type="Animation" id="Animation_2frgi"]
resource_name = "show_healing"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Heal:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Heal:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.5, 0)]
}

[sub_resource type="Animation" id="Animation_8c3b8"]
resource_name = "take_damage"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Front:position:z")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8),
"transitions": PackedFloat32Array(0.176777, 4.59479, 1),
"update": 0,
"values": [0.0, 0.5, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Front:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.8),
"transitions": PackedFloat32Array(10.9283, 3.13834, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.729412, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SFX/Damage:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_711b7"]
_data = {
&"RESET": SubResource("Animation_brmxk"),
&"activate": SubResource("Animation_ykqwr"),
&"die": SubResource("Animation_dx17v"),
&"flip_down": SubResource("Animation_vm8ob"),
&"flip_up": SubResource("Animation_6tdgx"),
&"heal": SubResource("Animation_3gibq"),
&"hover_in": SubResource("Animation_0xfol"),
&"hover_out": SubResource("Animation_sdvnn"),
&"play": SubResource("Animation_qcbxv"),
&"reveal": SubResource("Animation_mfx8y"),
&"show_damage": SubResource("Animation_t3lm6"),
&"show_healing": SubResource("Animation_2frgi"),
&"take_damage": SubResource("Animation_8c3b8")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_707df"]
size = Vector3(1, 0.015, 1.4)

[node name="CardScene" type="Node3D"]
script = ExtResource("1_1lm4k")
c = ExtResource("2_6w4ti")

[node name="Front" type="Sprite3D" parent="."]
transform = Transform3D(0.206285, 0, 0, 0, 0.206285, 0, 0, 0, 0.206285, 0, 0.005, 0)
axis = 1
shaded = true
double_sided = false
texture = SubResource("ViewportTexture_lb430")

[node name="Back" type="Sprite3D" parent="."]
transform = Transform3D(-0.206285, 1.8034e-08, 0, -1.8034e-08, -0.206285, 0, 0, 0, 0.206285, 0, -0.005, 0)
axis = 1
shaded = true
double_sided = false
texture = ExtResource("1_7utkc")

[node name="Card" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(500, 700)
render_target_update_mode = 4

[node name="CardFront" parent="Card" instance=ExtResource("5_gtb1b")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_711b7")
}

[node name="DamagePlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_711b7")
}

[node name="HealPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_711b7")
}

[node name="Hitbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("BoxShape3D_707df")

[node name="Damage" type="Sprite3D" parent="."]
visible = false
pixel_size = 0.02
billboard = 1
texture_filter = 0
texture = ExtResource("10_7bc34")

[node name="Label" type="Label3D" parent="Damage"]
pixel_size = 0.01
billboard = 1
render_priority = 2
outline_render_priority = 1
modulate = Color(1, 0.905882, 0, 1)
text = "30"
font = ExtResource("5_kjciy")
font_size = 48

[node name="Heal" type="Sprite3D" parent="."]
visible = false
pixel_size = 0.02
billboard = 1
texture_filter = 0

[node name="Label" type="Label3D" parent="Heal"]
pixel_size = 0.01
billboard = 1
render_priority = 2
outline_render_priority = 1
modulate = Color(1, 0.690196, 0.694118, 1)
outline_modulate = Color(0.631373, 0.270588, 0.34902, 1)
text = "+30"
font = ExtResource("7_iaee2")
font_size = 48

[node name="SFX" type="Node3D" parent="."]

[node name="Damage" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("12_76iwj")
bus = &"SFX"

[node name="Heal" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("9_w001t")
bus = &"SFX"

[node name="Death" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("8_5t3wl")
bus = &"SFX"

[node name="Summon" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("13_0vcph")
bus = &"SFX"

[node name="Activate" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("14_cvjde")
bus = &"SFX"

[node name="Cast" type="AudioStreamPlayer3D" parent="SFX"]
bus = &"SFX"

[node name="DebugCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.588039, 0.808832, 0, -0.808832, 0.588039, 0, 1.29363, 0.783088)
visible = false

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="input_event" from="Hitbox" to="." method="_on_hitbox_input_event"]
[connection signal="mouse_entered" from="Hitbox" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_mouse_exited"]
